--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "react-router-dom": "^6.27.0",
     "sequelize": "^6.37.5"
   }
 }
