--- a/package.json
+++ b/package.json
@@ -17,11 +17,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.0",
+    "@types/faker": "^6.6.8",
+    "@types/jsonwebtoken": "^9.0.7",
     "concurrently": "^9.0.1"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.1.0",
     "axios": "^1.7.7",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "react-router-dom": "^6.27.0",
