--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/node-fetch": "^2.6.11",
     "@types/pg": "^8.11.10",
     "nodemon": "^3.1.7"
   },
