--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^5.0.0",
     "@types/faker": "^6.6.8",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/node-fetch": "^2.6.11",
     "concurrently": "^9.0.1"
   },
   "dependencies": {
