--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "scripts": {
     "client:install": "cd ./client && npm i",
     "client:dev": "cd ./client && npm run dev",
+    "client:build": "cd ./client && npm run build",
     "server:install": "cd ./server && npm i",
+    "server:build": "cd ./server && npm run build",
     "server:dev": "cd ./server && npm run dev",
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "seed": "cd ./server && npm run seed",
-    "start": "node ./server/dist/server.js",
-    "install:all": "npm i && concurrently \"npm run client:install\" \"npm run server:install\""
+    "start": "cd ./server && npm start",
+    "install": "cd ./server && npm i",
+    "install:all": "npm i && concurrently \"npm run client:install\" \"npm run server:install\"",
+    "save": "git add -A && git commit -m \"ready for deploy\"",
+    "push": "git push origin HEAD",
+    "deploy": "npm run client:build && npm run server:build && npm run save && npm run push"
   },
   "keywords": [],
   "author": "",
